tests/protocol_v3/snapshots/protocol_v3__lazy_deferred_once__requested_optional_and_deferred.snap
---
source: tests/protocol_v3/lazy_deferred_once.rs
expression: requested
---
{
  "status": 200,
  "headers": {
    "content-type": [
      "application/json"
    ],
    "vary": [
      "X-Inertia"
    ],
    "x-inertia": [
      "true"
    ]
  },
  "body": {
    "type": "json",
    "value": {
      "component": "Dashboard",
      "deferredProps": {
        "default": [
          "metrics",
          "deferredOnce"
        ],
        "sidebar": [
          "relatedPosts"
        ]
      },
      "onceProps": {
        "deferredOnce": {
          "expiresAt": null,
          "prop": "deferredOnce"
        },
        "feature-catalog": {
          "expiresAt": 1735689600000,
          "prop": "features"
        },
        "optionalOnce": {
          "expiresAt": null,
          "prop": "optionalOnce"
        },
        "plans": {
          "expiresAt": null,
          "prop": "plans"
        }
      },
      "props": {
        "always": 1,
        "analytics": {
          "visits": 3
        },
        "audit": [
          "created"
        ],
        "errors": {}
      },
      "url": "/lazy",
      "version": "asset-version-v3"
    }
  }
}
